--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -59,7 +59,8 @@ layout: default
         {% endif %}
     </div>
 
-{% include commento.html %}
+<!--{% include commento.html %}-->
+{% include disqus.html %}
 
 </div>
 
