--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,7 @@
     {% endif %}
 
 </head>
+<script id="dsq-count-scr" src="//pick8chu.disqus.com/count.js" async></script>
 <body>
 {% include topnav.html %}
 <!-- Page Content -->
