--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
             {% endif %}
             {% endfor %}
             {% endif %}
-
+			{% if page.comments %} • <a href="https://pick8chu.github.io{{ page.url }}#disqus_thread">0 Comments</a>{% endif %}
         </p>
 
 
@@ -32,7 +32,7 @@ layout: default
 
 </article>
 
-{% include commento.html %}
+{% include disqus.html %}
 
 {{site.data.alerts.hr_shaded}}
 
