--- a/_includes/feedback.html
+++ b/_includes/feedback.html
@@ -5,9 +5,12 @@
   {% assign feedback_text = "Feedback" %}
 {% endif %}
 
+  <a class="email" title="Submit feedback" href="{{ site.url }}/about_contact_me">{{feedback_text}}</a>
+<!--
 {% if site.feedback_link %}
-  <a class="email" title="Submit feedback" href="{{site.feedback_link}}">{{feedback_text}}</a>
+  <a class="email" title="Submit feedback" href="{{ site.url }}/index.html#contact-me">{{feedback_text}}</a>
 {% else %}
   <a class="email" title="Submit feedback" href="#" onclick="javascript:window.location='mailto:{{site.feedback_email}}?subject={{site.feedback_subject_line}} feedback&body=I have some feedback about the {{page.title}} page: ' + window.location.href;"><i class="fa fa-envelope-o"></i> {{feedback_text}}</a>
 {% endif %}
+-->
 </li>
