--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,5 @@
 <form class="contact" action="https://formspree.io/{{site.feedback_email}}" method="POST">
-    <input type="text" name="_replyto" placeholder="Email">
+    <input type="text" name="email" placeholder="Email">
     <input type="text" name="name" placeholder="Name">
     <textarea type="text" name="message" rows="5" placeholder="Message"></textarea>
     <input type="hidden" name="_subject" value="Feedback of pick8chu's blog">
