--- a/css/theme-gray.css
+++ b/css/theme-gray.css
@@ -140,7 +140,10 @@ li.sidebarTitle {
     margin-left: 5px;
 }
 
-.navbar-inverse .navbar-toggle:focus,
 .navbar-inverse .navbar-toggle:hover {
-    background-color: #E50E51;
+    background-color: #947D5D;
+}
+
+.navbar-inverse .navbar-toggle:focus {
+    background-color: #7A6241;
 }
