--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,14 +1,30 @@
-<form class="contact" action="https://formspree.io/{{site.feedback_email}}" method="POST">
-    <input type="text" name="email" placeholder="Email">
-    <input type="text" name="name" placeholder="Name">
-    <textarea type="text" name="message" rows="5" placeholder="Message"></textarea>
-    <input type="hidden" name="_subject" value="Feedback of pick8chu's blog">
-    <input type="text" name="_gotcha" style="display:none">
-    <input type="submit" value="Submit">
+<form action="https://api.web3forms.com/submit" method="POST">
+  <input
+    type="hidden"
+    name="access_key"
+    value="{{site.access_code_for_web3forms}}"
+  />
+
+  <!-- Form Inputs. Each input must have a name="" attribute -->
+  <input type="text" name="name" required />
+  <input type="email" name="email" required />
+  <textarea type="text" name="message" rows="5" required></textarea>
+
+  <!-- Honeypot Spam Protection -->
+  <input type="checkbox" name="botcheck" class="hidden" style="display: none" />
+
+  <input type="hidden" name="_subject" value="Feedback of pick8chu's blog" />
+  <input type="text" name="_gotcha" style="display: none" />
+
+  <!-- Custom Confirmation / Success Page -->
+  <!-- <input type="hidden" name="redirect" value="https://mywebsite.com/thanks.html"> -->
+
+  <button type="submit">Submit Form</button>
 </form>
 
 <style>
-form.contact input[type="text"], form.contact textarea[type="text"] {
+  form.contact input[type="text"],
+  form.contact textarea[type="text"] {
     width: 100%;
     vertical-align: middle;
     margin-top: 0.25em;
@@ -20,11 +36,10 @@ form.contact input[type="text"], form.contact textarea[type="text"] {
     outline-color: #2e83e6;
     border-width: 1px;
     border-radius: 3px;
-    transition: box-shadow .2s ease;
-}
+    transition: box-shadow 0.2s ease;
+  }
 
-
-form.contact input[type="submit"] {
+  form.contact input[type="submit"] {
     width: 100%;
     outline: none;
     color: white;
@@ -34,12 +49,12 @@ form.contact input[type="submit"] {
     margin: 0.25em 0 0 0;
     border: 1px solid transparent;
     height: auto;
-}
+  }
 
-form.contact input[type="submit"]:hover {
-    background-color: #2466B3;
-}
-form.contact input[type="submit"]:active {
+  form.contact input[type="submit"]:hover {
+    background-color: #2466b3;
+  }
+  form.contact input[type="submit"]:active {
     background-color: #909090;
-}
+  }
 </style>
