--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<form action="https://api.web3forms.com/submit" method="POST">
+<form class="contact" action="https://api.web3forms.com/submit" method="POST">
   <input
     type="hidden"
     name="access_key"
