--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,9 +6,15 @@
   />
 
   <!-- Form Inputs. Each input must have a name="" attribute -->
-  <input type="text" name="name" required />
-  <input type="email" name="email" required />
-  <textarea type="text" name="message" rows="5" required></textarea>
+  <input type="email" name="email" placeholder="Email" required />
+  <input type="text" name="name" placeholder="Name" required />
+  <textarea
+    type="text"
+    name="message"
+    placeholder="Message"
+    rows="5"
+    required
+  ></textarea>
 
   <!-- Honeypot Spam Protection -->
   <input type="checkbox" name="botcheck" class="hidden" style="display: none" />
@@ -53,6 +59,9 @@
 
   form.contact input[type="submit"]:hover {
     background-color: #2466b3;
+  }
+  form.contact input[type="name"]:hover {
+    float: right;
   }
   form.contact input[type="submit"]:active {
     background-color: #909090;
