--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,7 +6,7 @@
   />
 
   <!-- Form Inputs. Each input must have a name="" attribute -->
-  <input type="email" name="email" placeholder="Email" required />
+  <input type="text" name="email" placeholder="Email" required />
   <input type="text" name="name" placeholder="Name" required />
   <textarea
     type="text"
